# rust_os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: GlobalAlloc.rs  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: heap_allocation.rs  stack_overflow.rs
